@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.L0RE.tlc" name="TLC Mediathek" version="1.0.2" provider-name="L0RE">
+<addon id="plugin.video.L0RE.tlc" name="TLC Mediathek" version="1.0.3" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 	</requires>
@@ -24,8 +24,8 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 1.0.2  (17.08.2019)[/COLOR][/B] by realvito[CR]
-- fixed: Rubrik = Themen - Ordner ist leer
+		<news>[B][COLOR orangered]Version 1.0.3  (20.10.2019)[/COLOR][/B] by realvito[CR]
+- fixed: Titelanzeige aller Serien-Episoden fehlerhaft
 		</news>
 	</extension>
 </addon>
