@@ -86,15 +86,12 @@ def log(msg, level=xbmc.LOGNOTICE):
 	msg = py2_enc(msg)
 	xbmc.log("["+addon.getAddonInfo('id')+"-"+addon.getAddonInfo('version')+"]"+msg, level)
 
-def getUrl(url, header=None):
+def getUrl(url, header=None, agent='Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/65.0.3325.162 Safari/537.36'):
 	global cj
 	opener = build_opener(HTTPCookieProcessor(cj))
+	opener.addheaders = [('User-Agent', agent), ('Accept-Encoding', 'gzip, deflate')]
 	try:
-		if header:
-			opener.addheaders = header
-		else:
-			opener.addheaders = [('User-Agent', 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/65.0.3325.162 Safari/537.36')]
-			opener.addheaders = [('Accept-Encoding', 'gzip, deflate')]
+		if header: opener.addheaders = header
 		response = opener.open(url, timeout=30)
 		if response.info().get('Content-Encoding') == 'gzip':
 			content = py3_dec(gzip.GzipFile(fileobj=io.BytesIO(response.read())).read())
@@ -102,10 +99,7 @@ def getUrl(url, header=None):
 			content = py3_dec(response.read())
 	except Exception as e:
 		failure = str(e)
-		if hasattr(e, 'code'):
-			failing("(getUrl) ERROR - ERROR - ERROR : ########## {0} === {1} ##########".format(url, failure))
-		elif hasattr(e, 'reason'):
-			failing("(getUrl) ERROR - ERROR - ERROR : ########## {0} === {1} ##########".format(url, failure))
+		failing("(getUrl) ERROR - ERROR - ERROR : ########## {0} === {1} ##########".format(url, failure))
 		content = ""
 		return sys.exit(0)
 	opener.close()
@@ -128,12 +122,12 @@ def ADDON_operate(TESTING):
 		return True
 
 def index():
-	addDir(translation(30601), baseURL+"api/search?query=*&limit=50", "listseries", icon, nosub="overview_all")
-	addDir(translation(30602), "", "listthemes", icon)
-	addDir(translation(30603), baseURL+"api/shows/highlights?limit=50", "listseries", icon, nosub="featured")
-	addDir(translation(30604), baseURL+"api/shows/neu?limit=50", "listseries", icon, nosub="recently_added")
-	addDir(translation(30605), baseURL+"api/shows/beliebt?limit=50", "listseries", icon, nosub="most_popular")
-	addDir(translation(30606), "", "listShowsFavs", icon)
+	addDir(translation(30601), "", "listShowsFavs", icon)
+	addDir(translation(30602), baseURL+"api/search?query=*&limit=50", "listseries", icon, nosub="overview_all")
+	addDir(translation(30603), "", "listthemes", icon)
+	addDir(translation(30604), baseURL+"api/shows/highlights?limit=50", "listseries", icon, nosub="featured")
+	addDir(translation(30605), baseURL+"api/shows/neu?limit=50", "listseries", icon, nosub="recently_added")
+	addDir(translation(30606), baseURL+"api/shows/beliebt?limit=50", "listseries", icon, nosub="most_popular")
 	if enableAdjustment:
 		addDir(translation(30607), "", "aSettings", icon)
 		if enableInputstream:
@@ -187,12 +181,12 @@ def listseries(url, PAGE, POS, ADDITION):
 		if idd !="" and len(idd) < 9 and plot != "" and image != "":
 			count += 1
 			if 'beliebt' in url:
-				name = "[COLOR chartreuse]"+str(count)+" •  [/COLOR]"+title
+				name = '[COLOR chartreuse]'+str(count)+' •  [/COLOR]'+title
 			try: 
 				if elem['hasNewEpisodes']: name = name+translation(30609)
 			except: pass
 			debug("(listseries) Filtered ### NAME : "+str(name)+" || IDD : "+str(idd)+" || IMAGE : "+str(image)+" ###")
-			addType=2
+			addType=1
 			if os.path.exists(channelFavsFile):
 				with open(channelFavsFile, 'r') as output:
 					lines = output.readlines()
@@ -200,7 +194,7 @@ def listseries(url, PAGE, POS, ADDITION):
 						if line.startswith('###START'):
 							part = line.split('###')
 							idd_FS = part[2]
-							if idd == idd_FS: addType=1
+							if idd == idd_FS: addType=2
 			addDir(name, idd, "listepisodes", image, plot, nosub=ADDITION, originalSERIE=title, addType=addType)
 	currentRESULT = count
 	debug("(listseries) ##### currentRESULT : "+str(currentRESULT)+" #####")
@@ -227,7 +221,7 @@ def listepisodes(idd, originalSERIE):
 	except: return xbmcgui.Dialog().notification(translation(30521).format(str(idd)), translation(30522), icon, 12000)
 	genstr = ""
 	genreList=[]
-	if 'genres' in DATA['show']:
+	if 'show' in DATA and 'genres' in DATA['show'] and DATA['show']['genres'] != "" and DATA['show']['genres'] != None:
 		for item in DATA['show']['genres']:
 			gNames = py2_enc(item['name'])
 			genreList.append(gNames)
@@ -242,16 +236,16 @@ def listepisodes(idd, originalSERIE):
 					if 'isPlayable' in vid and vid['isPlayable'] == True:
 						debug("(listepisodes) ##### subelement-1-vid : "+str(vid)+" #####")
 						season = ""
-						if 'season' in vid and vid['season'] != "" and vid['season'] != "0" and vid['season'] != None:
+						if 'season' in vid and vid['season'] != "" and str(vid['season']) != "0" and vid['season'] != None:
 							season = str(vid['season']).zfill(2)
 						episode = ""
-						if 'episode' in vid and vid['episode'] != "" and vid['episode'] != "0" and vid['episode'] != None:
+						if 'episode' in vid and vid['episode'] != "" and str(vid['episode']) != "0" and vid['episode'] != None:
 							episode = str(vid['episode']).zfill(2)
-						title = py2_enc(vid['title'])
-						if (season != "" and season in title) and (episode != "" and episode in title):
-							title1 = "[COLOR chartreuse]"+title.split(':')[0].replace('{S}', 'S').replace('.{E}', 'E')+":[/COLOR]"
-							title2 = title.split(':')[1]
-							number = title.split(':')[0].replace('{S}', 'S').replace('.{E}', 'E')
+						title = py2_enc(vid['name']).strip()
+						if season != "" and episode != "":
+							title1 = '[COLOR chartreuse]S'+season+'E'+episode+':[/COLOR]'
+							title2 = title
+							number = 'S'+season+'E'+episode
 						else:
 							title1 = title
 							title2 = ""
@@ -281,7 +275,7 @@ def listepisodes(idd, originalSERIE):
 						if startTIMES: Note_1 = translation(30611).format(str(startTIMES))
 						if endTIMES: Note_2 = translation(30612).format(str(endTIMES))
 						if 'description' in vid and vid['description'] != "" and vid['description'] != None:
-							Note_3 = py2_enc(vid['description']).replace('\n\n\n', '\n\n')
+							Note_3 = py2_enc(vid['description']).replace('\n\n\n', '\n\n').strip()
 						plot = Note_1+Note_2+Note_3
 						image = ""
 						if 'image' in vid and 'src' in vid['image'] and vid['image']['src'] != "" and vid['image']['src'] != None:
@@ -298,12 +292,12 @@ def listepisodes(idd, originalSERIE):
 				if 'isPlayable' in item and item['isPlayable'] == True:
 					debug("(listepisodes) ##### subelement-2-item : "+str(item)+" #####")
 					season = "00"
-					if 'season' in item and item['season'] != "" and item['season'] != "0" and item['season'] != None:
+					if 'season' in item and item['season'] != "" and str(item['season']) != "0" and item['season'] != None:
 						season = str(item['season']).zfill(2)
 					episode = ""
-					if 'episode' in item and item['episode'] != "" and item['episode'] != "0" and item['episode'] != None:
+					if 'episode' in item and item['episode'] != "" and str(item['episode']) != "0" and item['episode'] != None:
 						episode = str(item['episode']).zfill(2)
-					title = py2_enc(item['title'])
+					title = py2_enc(item['name']).strip()
 					begins = None
 					year = None
 					airdate = None
@@ -331,7 +325,7 @@ def listepisodes(idd, originalSERIE):
 					if startTIMES: Note_1 = translation(30611).format(str(startTIMES))
 					if endTIMES: Note_2 = translation(30612).format(str(endTIMES))
 					if 'description' in item and item['description'] != "" and item['description'] != None:
-						Note_3 = py2_enc(item['description']).replace('\n\n\n', '\n\n')
+						Note_3 = py2_enc(item['description']).replace('\n\n\n', '\n\n').strip()
 					plot = Note_1+Note_2+Note_3
 					image = ""
 					if 'image' in item and 'src' in item['image'] and item['image']['src'] != "" and item['image']['src'] != None:
@@ -345,15 +339,15 @@ def listepisodes(idd, originalSERIE):
 			if SELECT:
 				for title, idd2, image, plot, duration, season, episode, genstr, year, airdate, begins in sorted(SELECT, key=lambda ad:ad[9], reverse=False):
 					pos1 += 1
-					if (season != "00" and season in title) and (episode != "" and episode in title):
-						title1 = "[COLOR orangered]"+title.split(':')[0].replace('{S}', 'S').replace('.{E}', 'E')+":[/COLOR]"
-						title2 = title.split(':')[1]
-						number = title.split(':')[0].replace('{S}', 'S').replace('.{E}', 'E')
+					if season != "00" and episode != "":
+						title1 = '[COLOR orangered]S'+season+'E'+episode+':[/COLOR]'
+						title2 = title
+						number = 'S'+season+'E'+episode
 					else:
 						episode = str(pos1).zfill(2)
-						title1 = "[COLOR orangered]S00E"+episode+":[/COLOR]"
-						title2 = title+"  (Special)"
-						number = "S00E"+episode
+						title1 = '[COLOR orangered]S00E'+episode+':[/COLOR]'
+						title2 = title+'  (Special)'
+						number = 'S00E'+episode
 					COMBI.append([number, title1, title2, idd2, image, plot, duration, season, episode, genstr, year, begins])
 	else:
 		debug("(listepisodes) ##### Keine COMBINATION-List - Kein Eintrag gefunden #####")
@@ -417,7 +411,7 @@ def listShowsFavs():
 			for line in lines:
 				if line.startswith('###START'):
 					part = line.split('###')
-					addDir(name=part[3], url=part[2], mode="listepisodes", iconimage=part[4].strip(), plot=part[5].replace('#n#', '\n').strip(), originalSERIE=part[3], FAVdel=True)
+					addDir(name=part[3], url=part[2], mode="listepisodes", image=part[4].strip(), plot=part[5].replace('#n#', '\n').strip(), originalSERIE=part[3], FAVdel=True)
 					debug("(listShowsFavs) ##### NAME : "+str(part[3])+" | URL : "+str(part[2])+" #####")
 	xbmcplugin.endOfDirectory(pluginhandle)
 
@@ -464,28 +458,26 @@ def parameters_string_to_dict(parameters):
 				paramDict[paramSplits[0]] = paramSplits[1]
 	return paramDict
 
-def addDir(name, url, mode, iconimage, plot=None, page=1, position=0, nosub=0, originalSERIE="", addType=0, FAVdel=False):
-	u = sys.argv[0]+"?url="+quote_plus(url)+"&name="+quote_plus(name)+"&page="+str(page)+"&position="+str(position)+"&nosub="+str(nosub)+"&originalSERIE="+quote_plus(originalSERIE)+"&mode="+str(mode)
-	liz = xbmcgui.ListItem(name, iconImage=icon, thumbnailImage=iconimage)
+def addDir(name, url, mode, image, plot=None, page=1, position=0, nosub=0, originalSERIE="", addType=0, FAVdel=False):
+	u = sys.argv[0]+'?url='+quote_plus(url)+'&page='+str(page)+'&position='+str(position)+'&nosub='+str(nosub)+'&originalSERIE='+quote_plus(originalSERIE)+'&mode='+str(mode)
+	liz = xbmcgui.ListItem(name)
 	liz.setInfo(type='Video', infoLabels={'Title': name, 'Plot': plot})
-	liz.setArt({'poster': iconimage})
-	if useThumbAsFanart and iconimage != icon:
-		liz.setArt({'fanart': iconimage})
-	else:
-		liz.setArt({'fanart': defaultFanart})
+	liz.setArt({'icon': icon, 'thumb': image, 'poster': image, 'fanart': defaultFanart})
+	if useThumbAsFanart and image != icon:
+		liz.setArt({'fanart': image})
 	entries = []
-	if addType == 2 and FAVdel == False:
-		playListInfos_1 = 'MODE=ADD###START###{0}###{1}###{2}###{3}###END###'.format(url, originalSERIE, iconimage, plot.replace('\n', '#n#'))
-		entries.append([translation(30651), 'RunPlugin(plugin://'+addon.getAddonInfo('id')+'/?mode=favs&url='+quote_plus(playListInfos_1)+')'])
+	if addType == 1 and FAVdel == False:
+		playListInfos_1 = 'MODE=ADD###START###{0}###{1}###{2}###{3}###END###'.format(url, originalSERIE, image, plot.replace('\n', '#n#'))
+		entries.append([translation(30651), 'RunPlugin('+sys.argv[0]+'?mode=favs&url='+quote_plus(playListInfos_1)+')'])
 	if FAVdel == True:
-		playListInfos_2 = 'MODE=DEL###START###{0}###{1}###{2}###{3}###END###'.format(url, name, iconimage, plot)
-		entries.append([translation(30652), 'RunPlugin(plugin://'+addon.getAddonInfo('id')+'/?mode=favs&url='+quote_plus(playListInfos_2)+')'])
+		playListInfos_2 = 'MODE=DEL###START###{0}###{1}###{2}###{3}###END###'.format(url, name, image, plot)
+		entries.append([translation(30652), 'RunPlugin('+sys.argv[0]+'?mode=favs&url='+quote_plus(playListInfos_2)+')'])
 	liz.addContextMenuItems(entries, replaceItems=False)
 	return xbmcplugin.addDirectoryItem(handle=int(sys.argv[1]), url=u, listitem=liz, isFolder=True)
 
-def addLink(name, url, mode, iconimage, plot=None, duration=None, seriesname=None, season=None, episode=None, genre=None, year=None, begins=None):
-	u = sys.argv[0]+"?url="+quote_plus(url)+"&mode="+str(mode)
-	liz = xbmcgui.ListItem(name, iconImage=icon, thumbnailImage=iconimage)
+def addLink(name, url, mode, image, plot=None, duration=None, seriesname=None, season=None, episode=None, genre=None, year=None, begins=None):
+	u = sys.argv[0]+'?url='+quote_plus(url)+'&mode='+str(mode)
+	liz = xbmcgui.ListItem(name)
 	ilabels = {}
 	ilabels['Season'] = season
 	ilabels['Episode'] = episode
@@ -504,11 +496,9 @@ def addLink(name, url, mode, iconimage, plot=None, duration=None, seriesname=Non
 	ilabels['Mpaa'] = None
 	ilabels['Mediatype'] = 'episode'
 	liz.setInfo(type='Video', infoLabels=ilabels)
-	liz.setArt({'poster': iconimage})
-	if useThumbAsFanart and iconimage != icon:
-		liz.setArt({'fanart': iconimage})
-	else:
-		liz.setArt({'fanart': defaultFanart})
+	liz.setArt({'icon': icon, 'thumb': image, 'poster': image, 'fanart': defaultFanart})
+	if useThumbAsFanart and image != icon:
+		liz.setArt({'fanart': image})
 	liz.addStreamInfo('Video', {'Duration': duration})
 	liz.setProperty('IsPlayable', 'true')
 	liz.setContentLookup(False)
@@ -518,7 +508,7 @@ params = parameters_string_to_dict(sys.argv[2])
 name = unquote_plus(params.get('name', ''))
 url = unquote_plus(params.get('url', ''))
 mode = unquote_plus(params.get('mode', ''))
-iconimage = unquote_plus(params.get('iconimage', ''))
+image = unquote_plus(params.get('image', ''))
 page = unquote_plus(params.get('page', ''))
 position = unquote_plus(params.get('position', ''))
 nosub = unquote_plus(params.get('nosub', ''))
