@@ -13,3 +13,6 @@
 
 [B]Version 1.0.2  (17.08.2019)[/B] by realvito[CR]
 - fixed: Rubrik = Themen - Ordner ist leer
+
+[B]Version 1.0.3  (20.10.2019)[/B] by realvito[CR]
+- fixed: Titelanzeige aller Serien-Episoden fehlerhaft
